// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateFeature Should include language tag on non default dialect 1`] = `
Object {
  "feature": "# language: vi
Tính năng: title
  description
  description
  description
  description

  Kịch bản: 
    Thì Hello world
      Và This is defined on several **lines**",
  "newConfig": Object {
    "$schema": "https://raw.githubusercontent.com/cinoss/cupl/master/src/config.schema.json",
    "global": Object {
      "dialect": "vi",
    },
    "paths": Object {
      "": Object {
        "tags": Array [],
      },
    },
  },
}
`;

exports[`generateFeature Should support assert (!) 1`] = `
"Feature: undefined
  Scenario: this is condition
    Given this is condition"
`;

exports[`generateFeature Should support empty if branch 1`] = `
"Feature: undefined
  Scenario: a
    Given a

  Scenario: c
    Given c"
`;

exports[`generateFeature Should support long description 1`] = `
Object {
  "feature": "Feature: title
  description
  description
  description
  description

  Scenario: 
    Then Hello world
      And This is defined on several **lines**",
  "newConfig": Object {
    "$schema": "https://raw.githubusercontent.com/cinoss/cupl/master/src/config.schema.json",
    "global": Object {
      "dialect": "en",
    },
    "paths": Object {
      "": Object {
        "tags": Array [],
      },
    },
  },
}
`;

exports[`generateFeature Should support no description 1`] = `
Object {
  "feature": "Feature: title
  Scenario: 
    Then Hello world
      And This is defined on several **lines**",
  "newConfig": Object {
    "$schema": "https://raw.githubusercontent.com/cinoss/cupl/master/src/config.schema.json",
    "global": Object {
      "dialect": "en",
    },
    "paths": Object {
      "": Object {
        "tags": Array [],
      },
    },
  },
}
`;

exports[`generateScenario config should support scenario examples 1`] = `
Array [
  "  @web @server",
  "  Scenario Outline: User forgot PIN or made a typo",
  "    Given having <secret> as PIN",
  "    When enter <input> as PIN",
  "    Then show wrong PIN Entered",
  "      And return card to user",
  "",
  "    Examples:",
  "      | secret | input  |",
  "      | 111111 |        |",
  "      | 111111 | 111112 |",
]
`;

exports[`generateScenario config support dialects 1`] = `
Array [
  "  @web @server",
  "  Kịch bản: User forgot PIN or made a typo",
  "    Cho having 123456 as PIN",
  "    Khi enter 111111 as PIN",
  "    Thì show wrong PIN Entered",
  "      Và return card to user",
]
`;

exports[`generateScenario config support fallback to en if specified dialect is missing 1`] = `
Array [
  "  @web @server",
  "  Scenario: User forgot PIN or made a typo",
  "    Given having 123456 as PIN",
  "    When enter 111111 as PIN",
  "    Then show wrong PIN Entered",
  "      And return card to user",
]
`;

exports[`generateScenario config support path and global alias 1`] = `
Array [
  "  @web @server",
  "  Scenario: User forgot PIN or made a typo",
  "    Given having 123456 as PIN",
  "    When enter 111111 as PIN",
  "    Then show wrong PIN Entered",
  "      And return card to user",
]
`;

exports[`generateScenario should accept path with neither action nor condition 1`] = `
Array [
  "  Scenario: ",
  "    Then show wrong PIN Entered",
  "      And eject card",
]
`;

exports[`generateScenario should accept path with no condition 1`] = `
Array [
  "  Scenario: ",
  "    When user enters PIN",
  "    Then show wrong PIN Entered",
  "      And eject card",
]
`;

exports[`generateScenario should create scenario with Given Then When 1`] = `
Array [
  "  Scenario: entered wrong PIN",
  "    Given entered wrong PIN",
  "    When user enters PIN",
  "    Then show wrong PIN Entered",
  "      And eject card",
]
`;

exports[`generateScenario should support And on Given, When and Then 1`] = `
Array [
  "  Scenario: server responded|entered wrong PIN",
  "    Given server responded",
  "      And entered wrong PIN",
  "    When user push a card in",
  "      And user enters PIN",
  "    Then show wrong PIN Entered",
  "      And eject card",
]
`;
